n/a - June 30, 2004

	* Pass -depth in cleanfs

n/a - June 29, 2004

	* Made the grep for ONBOOT in the network script more exact

2.1.2 - June 27, 2004

	* install the automatic module loading script by default
	* Tagged as 2.1.2

n/a - June 26, 2004

	* Fixed font for UK in /etc/sysconfig/console

n/a - June 23, 2004

	* Fixed a typo in the hotplug installation procedure

n/a - June 21, 2004

	* Re-ordered the "mount" and "echo" commands in the udev script, to
	  prevent a possible race
	* Converted the udev script to use udevsend/udevd
	* Moved removal of /fastboot and /forcefsck to just after the root fs
	  becomes writable, and dropped the removal of /etc/nologin
	* Cleaned and tweaked both the output and actions of cleanfs
	* Removed the disabling of hotplug from sendsignals
	* Removed anything that might call "rmmod" in hotplug, since rmmod is
	  notoriously troublesome in the 2.6.x kernels, and call it with the
	  stop argument from runlevels 0 and 6
	* Fixed previous modifications to the udev and cleanfs scripts

n/a - June 20, 2004

	* Rolled back to the /dev/.udev.tdb check from 2.1.1, since the new
	  one doesn't work as well, and the bug that caused it to change is
	  now fixed

n/a - June 18, 2004

	* Updated sysconfig/console
	* Fixed disabling hotplug in sendsignals
	* hotplug is now installed by default

n/a - June 15, 2004

	* Reset /proc/sys/kernel/hotplug to /bin/true when running the "stop"
	  command for hotplug
	* Cleaned the output of the mountkernfs script
	* Don't output "Creating files and directories" when it's a lie

n/a - June 8, 2004

	* Changed the location the optional module script is installed to
	  /etc/rc.d/rcsysinit.d/S05modules.

n/a - June 4, 2004

	* Added a echo to the > /proc/sys/kernel/hotplug line, as > did not
	  clear it

n/a - June 3, 2004

	* Added '> /proc/sys/kernel/hotplug' to sendsignals, to disable hotplug
	  events, which may start up new daemons
	* Added elementry bootup logging support.  If it can write to